--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-oss-dev",
+  "name": "c0de-dev",
   "version": "1.74.2",
   "distro": "fbc246d437431ffae1a5a4c944dc037f74fc22cc",
   "author": {
